[tool.poetry]
name = "wcpan-drive-google"
version = "9.1.7"
description = "Google Drive driver for wcpan.drive"
authors = ["Wei-Cheng Pan <legnaleurc@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wcpan"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.6.0"
wcpan-drive-core = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
