[project]
name = "wcpan-drive-google"
version = "9.1.7"
description = "Google Drive driver for wcpan.drive"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Wei-Cheng Pan", email = "legnaleurc@gmail.com"}
]
dynamic = ["classifiers", "dependencies", "requires-python"]

[tool.poetry]
requires-poetry = "^2.1"
packages = [{include = "wcpan"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.12.14"
wcpan-drive-core = "^4.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
