[project]
name = "wcpan-drive-google"
version = "9.1.7"
description = "Google Drive driver for wcpan.drive"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Wei-Cheng Pan", email = "legnaleurc@gmail.com"}
]
requires-python = ">=3.12,<4.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "aiohttp>=3.13.3,<4.0.0",
    "wcpan-drive-core>=4.1.0,<5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wcpan"]
