[metadata]
name = wcpan.drive.google
version = attr: wcpan.drive.google.__version__
description = Google Drive driver for wcpan.drive
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
author = Wei-Cheng Pan
author_email = legnaleurc@gmail.com
url = https://github.com/legnaleurc/wcpan.drive.google

[options]
packages = wcpan.drive.google
namespace_packages = wcpan.drive
python_requires = >=3.8
install_requires =
    PyYAML ~= 5.3
    aiohttp ~= 3.6.2
    arrow ~= 0.15.5
    wcpan.drive.core ~= 1.0.0
    wcpan.logger ~= 1.2.3
